[package]
name = "nano-vanity"
version = "0.4.14"
description = "Generate NANO cryptocurrency addresses with a given prefix"
keywords = ["cryptocurrency", "nanocurrency", "opencl"]
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
readme = "README.md"
repository = "https://github.com/PlasmaPower/nano-vanity"
license = "BSD-2-Clause"

[features]
gpu = ["ocl"]
default = ["gpu"]
apple = []

[dependencies]
ed25519-dalek = "0.6.1"
clap = "2.30.0"
num_cpus = "1.8.0"
num-bigint = "0.4.4"
rand = "0.7.0"
hex = "0.3.1"
digest = "0.9.0"
num-traits = "0.2.18"
ocl = { version = "0.19.0", optional = true, features = ["opencl_version_1_1", "opencl_version_1_2"] }
byteorder = "1.3.2"
algonaut = "0.4.2"
base32 = "0.4.0"
sha2 = "0.7"

# rand = "0.4.2"
# hex = "0.4.0"
# digest = "0.7.2"
# num-traits = "0.2.0"
# ocl = { version = "0.19.3", optional = true, features = ["opencl_version_2_0", "opencl_version_2_1"] }
# reqwest = { version = "0.12", features = ["json"] }
# algonaut = "0.4.1"
# base32 = "0.4.0"
